# infai

./: README.md  llm.py  main.py  models.py  news.py  prompt.py  pyproject.toml  utils.py
app/config/: db.py
backend/: Dockerfile  main.py  news.py  prompt.py  pyproject.toml
backend/app/services/: news_service.py
backend/app/utils/: utils.py
frontend/: index.html  package-lock.json  package.json  wrangler.jsonc
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatBubble.tsx  Footer.tsx  Header.tsx  NewsCard.tsx  message.tsx
frontend/src/pages/: About.tsx  Chat.tsx  Home.tsx  News.tsx  NotFound.tsx
frontend/src/router/: Router.tsx
frontend/src/types/: news.ts
